--- a/geradordesenha.html
+++ b/geradordesenha.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="container-items">
             <div class="container-cabecalho">
+                <img class="cadeado-icon"src="icones/cadeado.svg" width="30px" alt="senha" srcset="">
                 <p>Seja Bem vindo ao</p>
                 <h1>GERADOR DE SENHAS</h1>
             </div>
