--- a/geradordesenha.html
+++ b/geradordesenha.html
@@ -13,8 +13,11 @@
         <div class="container-items">
             <div class="container-cabecalho">
                 <img class="cadeado-icon"src="icones/cadeado.svg" width="30px" alt="senha" srcset="">
-                <p>Seja Bem vindo ao</p>
-                <h1>GERADOR DE SENHAS</h1>
+                <div class="cabecalho-texto">
+                    <p>Seja Bem vindo ao</p>
+                    <h1>G3RADOR DE S3NHAS</h1>
+                </div>
+                
             </div>
             <div class="container-set">
                 <p class="char-number-text">Número de caracteres</p>
