--- a/geradordesenha.html
+++ b/geradordesenha.html
@@ -15,7 +15,7 @@
                 <img class="cadeado-icon"src="icones/cadeado.svg" width="30px" alt="senha" srcset="">
                 <div class="cabecalho-texto">
                     <p>Seja Bem vindo ao</p>
-                    <h1>G3RADOR DE S3NHAS</h1>
+                    <h1>GERADOR DE SENHAS</h1>
                 </div>
                 
             </div>
