--- a/jogodavelha.html
+++ b/jogodavelha.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="css/jogodavelha.css">
 </head>
 <body>
+    <div class="game-container">
     <div class="tela-1">
         <h1>JOGO DA VELHA</h1>
         <button class="btn-jogar">JOGAR</button>
     </div>
     <div class="tela-2">
         
-        
+        <p class="jogada-vez">Vez de...</p>
         <div class="jogo-area">
             <div class="q1 quadrados"></div>
             <div class="q2 quadrados"></div>
@@ -28,12 +29,15 @@
         </div>
     </div>
     <div class="tela-3">
+
         <div class="end-game">
             <h1>Fim de Jogo!</h1>
             <p class="resultado">... venceu!</p>
             <button class="btn-again">JOGAR NOVAMENTE</button>
         </div>
     </div>
+    <p class="copyright" >© 2022. Emerson Costa Gonçalves</p>
+</div>
     <script src="js/js-jogodavelha.js"></script>
 </body>
 </html>
