--- a/calculadora.html
+++ b/calculadora.html
@@ -10,7 +10,9 @@
 
 <body>
     <div class="calc-container">
+
         <div class="calculadora">
+        
             <div class="tela">
                 <div class="historico"></div>
                 <div class="visor-main">
@@ -54,7 +56,10 @@
             </div>
 
         </div>
+    
+        <p class="copyright" >© 2022. Emerson Costa Gonçalves</p>
     </div>
+
 
 
 
