--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         <section id="sobre" class="sobre-mim">
             <div class="info">
                 <div class="info-cabecalho">
-                    <h1>Olá, eu sou <span class="destaque">Emerson</span></h1>
+                    <h1><span class="destaque">Emerson</span> Costa Gonçalves</h1>
                     <div class="animar">
-                        <h1>Desenvolvedor.</h1>
+                        <h1 class="destaque">Desenvolvedor.</h1>
                     </div>
 
 
                 </div>
 
                 <div class="info-descricao">
-                    <p>Sou Desenvolvedor FrontEnd e Designer Gráfico
+                    <p>Sou <span class="destaque">Desenvolvedor FrontEnd</span> e <span class="destaque">Designer Gráfico</span>
                         freelancer no Brasil.
                     </p>
 
@@ -85,7 +85,7 @@
 
             </div>
             <div class="foto">
-                <div class="imagem"></div>
+                <img src="/imagens/emerson-perfil.png" width="550px" alt="Emerson Costa Gonçalves">
             </div>
         </section>
         <section id="skills" class="skills">
