--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio - Emerson Costa Gonçalves</title>
     <link rel="stylesheet" href="css/folhaDeEstilo.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -277,6 +278,7 @@
     </footer>
 
     <script src="js/animacoes.js"></script>
+    
 </body>
 
 </html>
