--- a/barraflix/index.html
+++ b/barraflix/index.html
@@ -13,7 +13,7 @@
 <body>
     <header id="topo">
         <div class="logoContainer">
-            <img id="logo" src="/imagens/barraflix-logo.svg" width="200px" alt="Barraflix logo" title="Barraflix">
+            <img id="logo" src="/barraflix/imagens/barraflix-logo.svg" width="200px" alt="Barraflix logo" title="Barraflix">
         </div>
         <div class="searchContainer">
             <input type="text" class="searchBar" placeholder="Pesquisar filme...">
@@ -63,7 +63,7 @@
     </div>
 
     <footer>
-        <img src="/imagens/barraflix-logo.svg" width="200px" alt="Barraflix logo" title="Barraflix">
+        <img src="/barraflix/imagens/barraflix-logo.svg" width="200px" alt="Barraflix logo" title="Barraflix">
         <p>© 2022. BARRAFLIX - Todos os Direitos Reservados</p>
     </footer>
     <script src="js/index.js"></script>
