--- a/index.html
+++ b/index.html
@@ -333,6 +333,22 @@
                 <div class="portifolio-box">
                     <div class="box-header">
                         <div class="portifolio-image">
+                            <div class="imagem-thumb-7"></div>
+                        </div>
+                    </div>
+                    <div class="box-main">
+                        <div class="portifolio-info">
+                            <h2>HTML5 | CSS3 | JavaScript | API</h2>
+                            <h1>Projeto Catálago de Filmes</h1>
+                            <button id="projeto-7">Ver Projeto</button>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="portifolio-box">
+                    <div class="box-header">
+                        <div class="portifolio-image">
                             <div class="imagem-thumb-1"></div>
                         </div>
                     </div>
@@ -425,6 +441,7 @@
                     </div>
 
                 </div>
+                
             </div>
 
         </section>
