--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <a href="#contato">Contato</a>
             <div class="icons-header">
                 <p>|</p>
-                <a href="https://www.instagram.com/emerson.costa_/">
+                <a class="social-link" href="https://www.instagram.com/emerson.costa_/">
                     <div>
                         <img class="instagram-icon" src="icones/instagram.svg" width="20px" alt="Linkedin" srcset="">
                     </div>
                 </a>
-                <a href="https://www.facebook.com/emerson.costagoncalves">
+                <a class="social-link" href="https://www.facebook.com/emerson.costagoncalves">
                     <div>
                         <img class="facebook-icon" src="icones/facebook.svg" width="10px" alt="Linkedin" srcset="">
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/emerson-costa-gon%C3%A7alves-517b81255/">
+                <a class="social-link" href="https://www.linkedin.com/in/emerson-costa-gon%C3%A7alves-517b81255/">
                     <div>
                         <img class="linkedin-icon" src="icones/linkedin.svg" width="20px" alt="Linkedin" srcset="">
                     </div>
