--- a/index.html
+++ b/index.html
@@ -499,19 +499,19 @@
 
                     <div class="redes-sociais">
                         <p>Me encontre<br> nas redes</p>
-                        <a href="https://www.instagram.com/emerson.costa_/">
+                        <a class="social-link" href="https://www.instagram.com/emerson.costa_/">
                             <div class="instagram bnt-midias">
                                 <img src="icones/instagram.svg" width="30px" alt="instagram" srcset="">
                             </div>
                         </a>
 
-                        <a href="https://www.facebook.com/emerson.costagoncalves">
+                        <a class="social-link" href="https://www.facebook.com/emerson.costagoncalves">
                             <div class="facebook bnt-midias">
                                 <img src="icones/facebook.svg" width="15px" alt="Facebook" srcset="">
                             </div>
                         </a>
 
-                        <a href="https://www.linkedin.com/in/emerson-costa-gon%C3%A7alves-517b81255/">
+                        <a class="social-link" href="https://www.linkedin.com/in/emerson-costa-gon%C3%A7alves-517b81255/">
                             <div class="linkedin bnt-midias">
                                 <img src="icones/linkedin.svg" width="25px" alt="Linkedin" srcset="">
                             </div>
