--- a/barraflix/index.html
+++ b/barraflix/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barraflix</title>
+    <title>Início - Barraflix</title>
     <link rel="shortcut icon" href="icones/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -65,6 +65,7 @@
     <footer>
         <img src="/barraflix/imagens/barraflix-logo.svg" width="200px" alt="Barraflix logo" title="Barraflix">
         <p>© 2022. BARRAFLIX - Todos os Direitos Reservados</p>
+        <p>Powered by Emerson Costa Gonçalves</p>
     </footer>
     <script src="js/index.js"></script>
     
