--- a/lol/index.html
+++ b/lol/index.html
@@ -14,7 +14,10 @@
     <div class="container-main">
         <div class="container">
             <div class="container-menu">
-                <img class="riot-logo" width="50px" src="/lol/icones/riot-ico.svg" alt="Riot Logo" title="Riot Games">
+                <a target="_blank" href="https://www.riotgames.com/pt-br">
+                    <img class="riot-logo" width="50px" src="/lol/icones/riot-ico.svg" alt="Riot Logo" title="Riot Games">
+                </a>
+                
                 <nav>
                     <a id="Todos" class="menu-items" menuDestaque="">Todos</a>
                     <div id="Assassin" classe="Assassinos" class="menu-class">
@@ -50,7 +53,7 @@
                         <img class="lol-logo" width="50px" src="/lol/imagens/lol-logo.png" alt="LOL Logo"
                             title="League Of Legends">
                     </a>
-
+                    <button class="btn-jogar">JOGUE AGORA</button>
                 </div>
 
                 <div class="container-info">
