--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
             <div class="info">
                 <div class="info-cabecalho">
                     <h1><span class="destaque">Emerson</span> Costa Gonçalves</h1>
-                    <div class="animar">
+                    <div id="animar-bar" class="animar">
                         <h1 class="destaque">Desenvolvedor.</h1>
                     </div>
+                    
 
                 </div>
 
