--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="info-descricao">
                     <p>Sou <span class="destaque">Desenvolvedor FrontEnd</span> e <span class="destaque">Designer
                             Gráfico</span>
-                        freelancer no Brasil.
+                        freelancer.
                     </p>
 
                 </div>
