--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <header class="cabecalho">
         <div class="foto"></div>
         <nav class="menu">
-            <a href="#sobre">Sobre Mim</a>
-            <a id="link-skills" href="#skills">Skills</a>
-            <a href="#experiencia">Experiência</a>
-            <a href="#educacao">Educação</a>
-            <a href="#portifolio">Portifólio</a>
-            <a href="#contato">Contato</a>
+            <div class="menu-container">
+                <a href="#sobre">Sobre Mim</a>
+                <a id="link-skills" href="#skills">Skills</a>
+                <a href="#experiencia">Experiência</a>
+                <a href="#educacao">Educação</a>
+                <a href="#portifolio">Portifólio</a>
+                <a href="#contato">Contato</a>
+            </div>
+            
 
         </nav>
         <div class="icons-header">
