--- a/barraflix/index.html
+++ b/barraflix/index.html
@@ -65,7 +65,7 @@
 
     <footer>
         <img src="/barraflix/imagens/barraflix-logo.svg" width="200px" alt="Barraflix logo" title="Barraflix">
-        <p>© 2022. BARRAFLIX - Todos os Direitos Reservados</p>
+        <p>© <span class="ano"></span> BARRAFLIX - Todos os Direitos Reservados</p>
         <p>Powered by Emerson Costa Gonçalves</p>
     </footer>
     <script src="js/index.js"></script>
