--- a/calculadora.html
+++ b/calculadora.html
@@ -57,7 +57,7 @@
 
         </div>
     
-        <p class="copyright" >© 2022. Emerson Costa Gonçalves</p>
+        <p class="copyright" >© <span class="ano">2022</span>. Emerson Costa Gonçalves</p>
     </div>
 
 
