--- a/gkanban.html
+++ b/gkanban.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="container-header">
-            <p class="copyright" >© 2022. Emerson Costa Gonçalves</p>
+            <p class="copyright" >© <span class="ano"></span>. Gerenciador de Tarefas Kanban</p>
         </div>
         <div class="container-main">
             <div class="container-colunas">
