--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             </a>
     
             <div class="foto"></div>
-            <p>© 2022. Todos os Direito Reservados</p>
+            <p>© <span class="ano"></span> Todos os Direito Reservados</p>
         </div>
         
     </footer>
