--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                             <label>Mensagem</label>
                             <textarea name="Mensagem" cols="40" rows="10" id="form-msg"></textarea>
                         </div>
-                        <button type="submit">ENVIAR MENSAGEM</button>
+                        <button class="btn-submit" type="submit">ENVIAR MENSAGEM</button>
                     </form>
                 </div>
             </div>
