--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
                 <div class="info-descricao">
                     <p>Sou <span class="destaque">Desenvolvedor FrontEnd</span> e <span class="destaque">Designer
-                            Gráfico</span>
-                        freelancer.
+                            Gráfico</span>.
                     </p>
 
                 </div>
