--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="caixa-exp-center">
-                    <p class="ano-destaque">2022 - Atual</p>
+                    <p class="ano-destaque">2019 - 2022</p>
                     <h1>Designer Gráfico</h1>
                     <h2>Agência Pixxart</h2>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="caixa-exp-center">
                     <p class="ano-destaque">2022 - 2022</p>
                     <h1>Desenvolvedor Web Moderno</h1>
-                    <h2>HTML5 | CCS3 | JavaScript | NodeJs | VueJs | React | Angular</h2>
+                    <h2>HTML5 | CSS3 | JavaScript | NodeJs | VueJs | React | Angular</h2>
                     <h4>Udemy</h4>
                 </div>
                 <div class="caixa-exp-right">
@@ -271,7 +271,7 @@
                 <div class="caixa-exp-center">
                     <p class="ano-destaque">2006 - 2006</p>
                     <h1>Web Design</h1>
-                    <h2>HTML | CCS | JavaScript | CorelDraw | Photoshop</h2>
+                    <h2>HTML | CSS | JavaScript | CorelDraw | Photoshop</h2>
                     <h4>ITEP - Instituto Tecnológico de Ensino Profissionalizante</h4>
                 </div>
                 <div class="caixa-exp-right">
