Add Mundial Lux Exp

--- a/index.html
+++ b/index.html
@@ -191,7 +191,26 @@
           <p class="destaque">Mais de 10 anos de experiência</p>
           <h1>Minha Experiência</h1>
         </div>
-
+        <div class="caixa-exp">
+          <div class="caixa-exp-left">
+            <div class="logo-empresa">
+              <img
+                src="/imagens/mundiallux-logo.png"
+                width="80px"
+                alt="Mundial Lux"
+                title="Mundial Lux"
+              />
+            </div>
+          </div>
+          <div class="caixa-exp-center">
+            <p class="ano-destaque">2023~</p>
+            <h1>Web Designer</h1>
+            <h2>Mundial Lux</h2>
+          </div>
+          <div class="caixa-exp-right">
+            <button class="btn-contact">Contato</button>
+          </div>
+        </div>
         <div class="caixa-exp">
           <div class="caixa-exp-left">
             <div class="logo-empresa">
