Att Mundial Lux Exp

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
             </div>
           </div>
           <div class="caixa-exp-center">
-            <p class="ano-destaque">2023~</p>
+            <p class="ano-destaque">2023</p>
             <h1>Web Designer</h1>
-            <h2>Mundial Lux</h2>
+            <h2>Mundial Lux Importação</h2>
           </div>
           <div class="caixa-exp-right">
             <button class="btn-contact">Contato</button>
