Att imagem perfil 2024

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
         <div class="foto">
           <img
-            src="/imagens/emerson-perfil.png"
+            src="/imagens/emerson-perfil-2024.png"
             width="550px"
             alt="Emerson Costa Gonçalves"
           />
