Insert info footer

--- a/index.html
+++ b/index.html
@@ -531,7 +531,8 @@
         </a>
 
         <div class="foto"></div>
-        <p>© <span class="ano"></span> Todos os Direito Reservados</p>
+        <p>Emerson Costa Gonçalves <span class="ano"></span> Agência PixxArt</p>
+        <p>© <span class="ano"></span> Todos os Direito Reservados - CNPJ: 32.877.246/0001-32</p>
       </div>
     </footer>
 
