add footer infos

--- a/index.html
+++ b/index.html
@@ -531,8 +531,10 @@
         </a>
 
         <div class="foto"></div>
-        <p>Emerson Costa Gonçalves <span class="ano"></span> Agência PixxArt</p>
-        <p>© <span class="ano"></span> Todos os Direito Reservados - CNPJ: 32.877.246/0001-32</p>
+         <p>© <span class="ano"></span> Emerson Costa Gonçalves - Agência PixxArt</p>
+        <p></span> Todos os Direito Reservados - CNPJ: 32.877.246/0001-32</p>
+        <p class="footer-facebook">Este site e os produtos e serviços oferecidos neste site não são associados, <br />afiliados, endossados ou patrocinados pelo Facebook,
+           nem foram revisados, testados ou certificados pelo Facebook. <br /> O nome e o logotipo do Facebook são marcas registradas do Facebook, Inc.</p>
       </div>
     </footer>
 
